<resources>
    <string name="app_name">Cuaderno del profe</string>
    <string name="app_description">Excelente aplicacion para que los profesores lleven de forma ordenada y bien estructurada la información de la clase</string>

    <string name="signup_action">Registrarse</string>
    <string name="signin_action">Iniciar sesión</string>

    <string name="email_field">Correo electrónico</string>
    <string name="password_field">Contraseña</string>
    <string name="name_field">Nombre</string>
    <string name="surname_field">Apellidos</string>

    <string name="have_acount">¿Ya tienes una cuenta?</string>

    <string name="card_assistane">Asistencia</string>
    <string name="card_assistance_description">Asistencia de tus estudiantes</string>
    <string name="card_calification">Calificaciones</string>
    <string name="card_group">Grupos</string>
    <string name="card_student">Estudiantes</string>
    <string name="card_calification_description">Califica a tus estudiantes</string>
    <string name="card_group_description">Grupos de estudiantes</string>
    <string name="card_student_description">Información de tus estudiantes</string>
    <string name="content_description_image">TODO</string>


</resources>
