<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context=".SignupActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="clip_vertical"
                android:orientation="vertical"
                android:padding="50dp"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/nameFieldSignUp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_person"
                    android:hint="@string/name_field"
                    android:inputType="textCapWords|textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/lastnameFieldSignUp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_user"
                    android:hint="@string/surname_field"
                    android:inputType="textCapWords|textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailFieldSignUp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/email_field"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordFieldSignUp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password_field"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_style"
                    android:text="@string/signup_action"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/have_acount"
                    android:textAlignment="center"
                    android:textColor="#aaa"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_signin_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_style_stroke_accent"
                    android:text="@string/signin_action"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
</ScrollView>