<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16sp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorLightText"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/app_description"
                    android:textAlignment="center"
                    android:textColor="@color/colorLightText"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_signup_action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_style_stroke_light"
                    android:text="@string/signup_action"
                    android:textAlignment="center"
                    android:textColor="@color/colorLightText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText

                    android:id="@+id/emailFieldSignIn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_mail"
                    android:hint="@string/email_field"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordFieldSignIn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:hint="@string/password_field"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textColorHint="@color/colorSecondaryText"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/button_style"
                    android:text="@string/signin_action"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>